--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.6.0", allow-prereleases = true}
+pytest = "^7.1.2"
+coverage = "^6.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
