--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = ">=3.8,<3.11"
 tensorflow = "^2.9.1"
 tqdm = "^4.64.0"
+matplotlib = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.6.0", allow-prereleases = true}
