--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ matplotlib = "^3.5.2"
 black = {version = "^22.6.0", allow-prereleases = true}
 pytest = "^7.1.2"
 coverage = "^6.4.2"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
