--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -48,7 +48,9 @@ jobs:
       - run: poetry install --no-interaction
       # Test project
       - name: Test with pytest
-        run: coverage run --branch -m pytest src
+        run: |
+          poetry shell
+          coverage run --branch -m pytest src
       # Upload code coverage
       - name: Upload coverage reports to Codecov
         run: |
