--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -49,8 +49,7 @@ jobs:
       # Test project
       - name: Test with pytest
         run: |
-          poetry shell
-          coverage run --branch -m pytest src
+          poetry run coverage run --branch -m pytest --disable-warnings src
       # Upload code coverage
       - name: Upload coverage reports to Codecov
         run: |
