--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = ">=3.8,<3.11"
 tensorflow = "^2.9.1"
 tqdm = "^4.64.0"
 matplotlib = "^3.5.2"
+fastapi = "^0.79.0"
+uvicorn = {extras = ["standard"], version = "^0.18.2"}
+Jinja2 = "^3.1.2"
+invoke = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.6.0", allow-prereleases = true}
