--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.local
-          key: poetry-1.1.12-0
+          key: poetry-1.1.12-1
 
       # Install Poetry
       - uses: snok/install-poetry@v1
@@ -38,7 +38,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .venv
-          key: pydeps-${{ hashFiles('**/poetry.lock') }}
+          key: pydeps-01-${{ hashFiles('**/poetry.lock') }}
 
       # Install dependencies
       - run: poetry install --no-interaction --no-root
