--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -55,4 +55,5 @@ jobs:
         run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
+          coverage xml
           ./codecov -t ${CODECOV_TOKEN}
